# mqtt_io

./: CMakeLists.txt  CMakePresets.json  build.sh  vcpkg.json
client/: CMakeLists.txt  main.qml
config/: CMakeLists.txt  configuration.cpp  configuration.h
jobemu/: CMakeLists.txt  JobImageMirror.qml  JobImageRgb2Gbr.qml  JobImageSubRect.qml  LogMessages.qml  Main.qml  ResultLocationSelector.qml  SourceImageFileSelector.qml  SpinBoxWithLabel.qml  emulator.cpp  emulator.h  logger.cpp  logger.h  main.cpp  resources.qrc  uicore.cpp  uicore.h
jobhandler/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
protocol/: CMakeLists.txt  job.proto  protocol.cpp  protocol.h
server/: CMakeLists.txt
